--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dsi32g6.Covid19Test">
+    package="com.Dsi32g6.Covid19Application">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/applicationlogo"
+        android:hardwareAccelerated="false"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/applicationlogo"
+        android:largeHeap="true"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Covid19Test">
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name="com.Dsi32g6.Covid19Application.LabAjout" />
+        <activity android:name="com.Dsi32g6.Covid19Application.Recherche" />
+        <activity android:name="com.Dsi32g6.Covid19Application.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
