--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name="com.Dsi32g6.Covid19Application.ListePatient"/>
+        <activity android:name="com.Dsi32g6.Covid19Application.Items"/>
         <activity android:name="com.Dsi32g6.Covid19Application.LabAjout" />
         <activity android:name="com.Dsi32g6.Covid19Application.Recherche" />
         <activity android:name="com.Dsi32g6.Covid19Application.MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
