les resultats de recherche des personnes pour les 3 cas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         <activity android:name="com.Dsi32g6.Covid19Application.ListePatient"/>
         <activity android:name="com.Dsi32g6.Covid19Application.Items"/>
         <activity android:name="com.Dsi32g6.Covid19Application.LabAjout" />
+        <activity android:name="com.Dsi32g6.Covid19Application.ResultatTest" />
+
         <activity android:name="com.Dsi32g6.Covid19Application.Recherche" />
         <activity android:name="com.Dsi32g6.Covid19Application.MainActivity">
 
